# besttvgu-bot

./: .gitignore  README.md  pyproject.toml
besttvgu_bot/: __init__.py  __main__.py  app.py  bot.py  config.py  consts.py  dispatcher.py  middlewares.py
besttvgu_bot/api_contracts/: api_requests.py  models.py
besttvgu_bot/api_contracts/group/: contracts.py  misc.py  models.py
besttvgu_bot/api_contracts/pdn/: contracts.py  models.py
besttvgu_bot/api_contracts/registration/: contracts.py  models.py
besttvgu_bot/api_contracts/tech_admins/: contracts.py  misc.py  models.py
besttvgu_bot/api_contracts/user/: contracts.py
besttvgu_bot/messages_templates/: already_registered.html  group_no_schedule.html  group_schedule.html  need_to_accept_consents.html  no_groups.html  not_accepting_consent.html  not_registered.html  not_so_far_in_schedule.html  on_registration.html  oops_something_went_wrong.html  profile.html  settings.html  start_message.html  user_accepted_consents.html  user_cur_group.html
besttvgu_bot/misc/: caching.py  datetime_lib.py  jinja.py  logger.py  misc.py  replies.py
besttvgu_bot/modules/: commands.py  documents_validator.py  errors_handler.py  pdn_handler.py  perf_metrics.py  user_settings.py
besttvgu_bot/pdns/: pdn_hashes.json
besttvgu_bot/router/admin/: endpoints.py  middlewares.py
besttvgu_bot/router/cancel/: endpoints.py
besttvgu_bot/router/general/: endpoints.py
besttvgu_bot/router/group/: callbacks_datas.py  endpoints.py  middlewares.py  misc.py
besttvgu_bot/router/registration/: endpoints.py  middlewares.py
(+7 files in other folders)
